--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nanoid": "^5.0.2",
+    "netlify-cli": "^16.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
